# rust-api-bench

./: README.md  test-round.sh
actix-dp/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
actix-dp/src/: main.rs
actix-dp/src/db/: todo_item.rs  todo_list.rs
actix-dp/src/handler/: mod.rs  todo_item.rs  todo_list.rs
actix-gql/: Cargo.toml  README.md  docker-compose.yml  loadtest.sh
actix-gql/src/db/: todo_list.rs
actix-gql/static/: index.html
actix-v2-dp/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
actix-v2-dp/src/: db.rs  handlers.rs  main.rs  models.rs
actix-v2-dp/static/: index.html
actix-v3-dp/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
actix-v3-dp/src/: handlers.rs  main.rs
actix-v3-dp/static/: index.html
hyper-dp/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  loadtest.sh
hyper-dp/src/: main.rs
hyper-dp/src/handler/: mod.rs  response.rs  static_content.rs  todo_item.rs  todo_list.rs
hyper-dp/static/: 404.html  index.html
loadtest/: .gitignore  README.md  package-lock.json  package.json
loadtest/autocannon/: graphql.js  test-actix-dp.js  test-actix-gql.js  test-actix-v2-dp.js  test-actix-v3-dp.js  test-hyper-dp.js  todos.js  utils.js
loadtest/pages/: index.js
loadtest/report/: db.json
warp-dp/: Cargo.toml  README.md
warp-dp/src/: routes.rs
