[package]
name = "actix-dp"
version = "0.0.5"
authors = ["Dusan Mijatovic (PC2016) <d.mijatovic@dv4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0"
# json serialization
serde = "1"
# logging
log="0"
env_logger = "0"
# postgres related
# deadpool-postgres = "0.5"
# tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }
# tokio-pg-mapper = "0.1"
# tokio-pg-mapper-derive = "0.1"
# use instead todo_dp lib
todo_dp={git = "https://github.com/dmijatovic/todo_dp_test", branch="master"}

