[package]
name = "actix-v3-dp"
version = "0.0.1"
authors = ["Dusan Mijatovic (xps2018) <d.mijatovic@dv4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-files = "0.3.0-beta.1"
serde = "1.0"
dotenv = "0.15"
config = "0.10"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5"
env_logger = "0.7"
deadpool-postgres = "0.5"

