[package]
name = "warp-dp"
version = "0.1.0"
authors = ["Dusan Mijatovic (PC2016) <d.mijatovic@dv4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo_dp={git = "https://github.com/dmijatovic/rust-api-bench/tree/master/hyper-dp/todo_dp", branch = "dev"}
warp="0"
tokio = { version = "0", features = ["full"] }
# json serialization
serde = "1.0"
serde_json = "1"
# logging
log = "0"
env_logger = "0"
